--- a/Symfony-Biblioteca/app/config/services.yml
+++ b/Symfony-Biblioteca/app/config/services.yml
@@ -4,6 +4,6 @@ parameters:
     #parameter_name: value
 
 services:
-    #service_name:
-    #    class: AppBundle\Directory\ClassName
-    #    arguments: ['@another_service_name', 'plain_value', '%parameter_name%']
+    app.message_generator:
+        class: AppBundle\Service\UsuarioService
+        arguments: ['@logger']
